corrected display overflow behaviour

--- a/style.css
+++ b/style.css
@@ -44,7 +44,11 @@ section{
     justify-content: flex-end;
     align-items: flex-end;
     border: 3px solid black;
+    flex-wrap: wrap;
+    overflow: hidden;
 }
+
+
 .buttons{
     display: flex;
     flex-wrap: wrap;
